[tool.poetry]
name = "tmview-scraper"
version = "0.1.0"
description = ""
authors = ["zaidejaz <zaidejaz521@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
bs4 = "^0.0.2"
playwright = "^1.47.0"
aiohttp = "^3.10.5"
aiofiles = "^24.1.0"
playwright-stealth = "^1.0.6"
selenium = "^4.24.0"
colorama = "^0.4.6"
nordvpn-switcher = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
